--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
   <!-- importing app scripts -->
-  <script type="text/javascript" src="./policies.js"></script>
-  <script type="text/javascript" src="./apiConfig.js"></script>
-  <script type="text/javascript" src="./authConfig.js"></script>
-  <script type="text/javascript" src="./ui.js"></script>
+  <script type="text/javascript" src="/policies.js"></script>
+  <script type="text/javascript" src="/apiConfig.js"></script>
+  <script type="text/javascript" src="/authConfig.js"></script>
+  <script type="text/javascript" src="/ui.js"></script>
   
   <!-- replace next line with authRedirect.js if you would like to use the redirect flow -->
   <!-- <script type="text/javascript" src="./authRedirect.js"></script>   -->
-  <script type="text/javascript" src="./authPopup.js"></script>
-  <script type="text/javascript" src="./api.js"></script>
+  <script type="text/javascript" src="/authPopup.js"></script>
+  <script type="text/javascript" src="/api.js"></script>
 </body>
 </html>
